UI: Adding a basic HUD displaying the current state of the game as well as a progress bar showing the power level progress towards winning

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Maps/CollectorLevel.CollectorLevel
 EditorStartupMap=/Game/Maps/CollectorLevel.CollectorLevel
-GlobalDefaultGameMode="/Script/BatteryCollector.BatteryCollectorGameMode"
+GlobalDefaultGameMode=/Game/Blueprints/BatteryCollectorGameMode_BP.BatteryCollectorGameMode_BP_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_8
